# polymarket-scanner

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: api_models.py  api_server.py  backtest.py  config.py  db.py  diagnostics.py  extract.py  job_runs.py  keywords.py  logger.py  main.py  models.py  read_db.py  read_service.py  recommendations.py  schema.py  scoring.py  utils.py
app/alerts/: telegram.py
app/clients/: base.py  clob.py  data_api.py  gamma.py
app/jobs/: discover.py  refresh_leaderboard.py  score_alerts.py  snapshot.py
docker/: api-entrypoint.sh  backend.Dockerfile  run-locked-job.sh  worker-entrypoint.sh
sql/: schema.sql
tests/: test_api.py  test_recommendations.py
web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/alerts/: page.tsx
web/app/guide/: page.tsx
web/app/markets/: page.tsx
web/app/markets/[conditionId]/: page.tsx
web/app/recommendations/: page.tsx
web/app/research/: page.tsx
web/app/system/: page.tsx
web/app/watchlist/: page.tsx
web/components/: app-shell.tsx  empty-state.tsx  live-market-activity.tsx  markets-table.tsx  section-header.tsx  stat-card.tsx  system-actions-panel.tsx  timeseries-chart.tsx  trade-aftermath-panel.tsx
web/components/ui/: badge.tsx  card.tsx  input.tsx  table.tsx
web/lib/: api.ts  mock-data.ts  utils.ts
web/tests/: smoke.spec.ts
