[project]
name = "polymarket-scanner"
version = "0.1.0"
description = "Scanner for Polymarket political and geopolitics anomalies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27,<0.29",
    "python-dotenv>=1.0,<2.0",
]

[project.scripts]
polymarket-scanner = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
