[project]
name = "polymarket-scanner"
version = "0.1.0"
description = "Scanner for Polymarket political and geopolitics anomalies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<0.116",
    "httpx>=0.27,<0.29",
    "pydantic>=2.9,<3.0",
    "pytest>=8.3,<9.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn>=0.32,<0.33",
]

[project.scripts]
polymarket-scanner = "app.main:main"
polymarket-scanner-api = "app.api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
